--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,7 +63,7 @@ h1{
     color: #8B48BF;
 }
 /*fin estilos cabecera*/
-.cajaPadre{
+.cajaPadre-1, .cajaPadre{
     display: flex;
 }
 
@@ -365,3 +365,84 @@ h2{
     height: 19px;
 }
 
+.botonMenu{
+    display: none;
+}
+
+@media (max-width:481px){
+    .categoriasCabecera{
+        display: none;
+    }
+    .boton1{
+        display: none;
+    }
+    .botonMenu{
+        display: block; 
+    }
+    
+    .padremobile{
+    display: flex;
+    flex-direction: column-reverse;
+    }
+
+    h2{
+        font-size: 52px;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .descripcion{
+        padding: 20px 50px 20px 50px;
+        text-align: center;
+    }
+
+    .boton-2{
+        display: flex;
+        justify-content: center;
+        padding: 20px 50px 10px 55px;
+    }
+
+    .boton2{
+        padding: 0px;
+    }
+
+    .tituloC-3{
+        font-size: 42px;
+        padding: 20px 10px 40px 10px;
+        text-align: center;
+    }
+
+    .descripcion-2{
+        padding: 5px 50px 40px 60px;
+        text-align: center;
+    }
+    
+    .cajaPadre-1{
+        flex-direction: column;
+    }
+
+    .versionMobile{
+        padding-left: 20px;
+    }
+
+    .subtituloC-3{
+        padding: 2px 60px 5px 80px;
+        background-color:  rgba(139, 72, 191, 0.3);
+        border-radius: 50px 0px 0px 50px;
+    }
+
+    .viñetas{
+        height: 33px;
+        width: 63px;
+        margin-left: -5px;
+        padding-top: 8px;   
+    }
+
+    .descripcion-3{
+        padding: 15px 10px 30px 10px;
+    }
+
+
+
+    
+}
