--- a/CSS/style.css
+++ b/CSS/style.css
@@ -270,7 +270,7 @@ h2{
 }
 
 .boton-4{
-    padding: 65px 120px 40px 40px;;
+    padding: 65px 120px 40px 40px;
     
 }
 
@@ -360,13 +360,21 @@ h2{
     font-size: 12px;
     color: #8C8C94;
     position: relative;
-    top: 80px;
+    top: 150px;
     right: 252px;
     height: 19px;
 }
 
 .botonMenu{
     display: none;
+}
+
+.labelfooter-mobile{
+    display: none;
+}
+
+.columnas{
+    display: flex;
 }
 
 @media (max-width:481px){
@@ -440,6 +448,77 @@ h2{
 
     .descripcion-3{
         padding: 15px 10px 30px 10px;
+    }
+
+    .ocultarComentario{
+        display: none;
+    }
+
+    .labelPrincipalfooter{
+        height: 318px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .labelfooter{
+        display: none;
+    }
+
+    .labelfooter-mobile{
+        font-family: 'Be Vietnam Pro', sans-serif;
+    font-size: 40px;
+    color: #ffff;
+    width: 587px;
+    font-size: 40px;
+    padding: 43px 173px 5px 66px;
+    text-align: center;
+    display: block;
+    }
+
+    .boton-4{
+        padding: 25px 104px 40px 173px;
+    }
+
+    .categoriasPiepag{
+        height: 535.89px;
+        flex-direction: column;
+    }
+
+    .labelRegistro{
+        order: -5;
+        padding: 30px 10px 28px 73px;
+    }
+
+
+    .columnas{
+        order: -4;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .categoria-pp1{
+    padding-top: 5px;
+    padding-bottom: 10px;
+    }
+
+    .iconos-redes-sociales{
+        order: -3;
+    }
+
+    .iconos{
+        padding: 5px 40px;
+    }
+
+    .logo-2{
+        order: -2;
+        padding: 65px 104px 20px 123px;
+    }
+
+    .derechosReservados{
+        order: -1;
+        text-align: center;
+        width: 100%;
+        margin-left: 52%;
     }
 
 
